1 November 2007: Wouter
	- Fixup of crash on reload, due to anchors in env not NULLed after
	  dealloc during deinit.
	- Fixup of chroot call. Happens after privileges are dropped, so
	  that checking the passwd entry still works.

31 October 2007: Wouter
	- cache-max-ttl config option.
	- building outside sourcedir works again.
	- defaults more secure:
		username: "unbound"
		chroot: "/etc/unbound"
	  The operator can override them to be less secure ("") if necessary.
	- fix horrible oversight in sorting rrset references in a message,
	  sort per reference key pointer, not on referencepointer itself.
	- pidfile: "/etc/unbound/unbound.pid" is now the default.
	- tests changed to reflect the updated default.
	- created hashtable clear() function that respects locks.

30 October 2007: Wouter
	- fixup assertion failure that relied on compressed names to be
	  smaller than uncompressed names. A packet from comrite.com was seen
	  to be compressed to a larger size. Added it as unit test.
	- quieter logging at low verbosity level for common tcp messages.
	- no greedy TTL update.

23 October 2007: Wouter
	- fixup (grand-)parent problem for dnssec-lameness detection.
	- fixup tests to do additional section processing for lame replies,
	  since the detection needs that.
	- no longer trust in query section in reply during dnssec lame detect.
	- dnssec lameness does not make the server never ever queried, but
	  non-preferred. If no other servers exist or answer, the dnssec lame
	  server is used; the fastest dnssec lame server is chosen.
	- added test then when trust anchor cannot be primed (nodata), the
	  insecure mode from unbound works.
	- Fixup max queries per thread, any more are dropped.

22 October 2007: Wouter
	- added donotquerylocalhost config option. Can be turned off for
	  out test cases.
	- ISO C compat changes.
	- detect RA-no-AA lameness, as LAME.
	- DNSSEC-lameness detection, as LAME.
	  See notes in requirements.txt for choices made.